# r0x1

./: .clang-format  .gitignore  CMakeLists.txt
lib/aria2/: libaria2.dylib
res/: dark.qss  resources.qrc  style.qss
src/: main.cpp
src/core/: app.cpp  app.h  appevent.cpp  appevent.h  launcher.cpp  launcher.h  setting.cpp  setting.h  task.cpp  task.h
src/libaria2/: aria2controller.cpp  aria2controller.h  aria2worker.cpp  aria2worker.h  ariainterface.cpp  ariainterface.h
src/network/: cnetwork.cpp  cnetwork.h  networklog.h
src/parser/: bili.cpp  bili.h  parser.h  url.cpp  url.h  urlutil.cpp  urlutil.h
src/platform/: framelesswindow.h  framelesswindow.mm  launcherlinux.cpp  launcherlinux.h  launchermac.cpp  launchermac.h  launcherwin.cpp  launcherwin.h  platform.h
src/ui/: basewindow.cpp  basewindow.h  theme.cpp  theme.h
src/ui/about/: aboutpage.cpp  aboutpage.h
src/ui/add/: addpage.cpp  addpage.h
src/ui/components/: checkablesvglabel.cpp  checkablesvglabel.h  horizonnavigation.cpp  horizonnavigation.h  toast.cpp  toast.h
src/ui/help/: helppage.cpp  helppage.h
src/ui/setting/: advancedsetting.cpp  advancedsetting.h  aria2settingdelegate.cpp  aria2settingdelegate.h  aria2settingmodel.cpp  aria2settingmodel.h  commonsetting.cpp  commonsetting.h  commonswitchbtn.cpp  commonswitchbtn.h  delegate.cpp  delegate.h  model.cpp  model.h  settingdelegate.cpp  settingdelegate.h  settingmodel.cpp  settingmodel.h  settingpage.cpp  settingpage.h  themeswitchbtn.cpp  themeswitchbtn.h
src/ui/sidebar/: sidebar.cpp  sidebar.h
src/ui/task/: taskdelegate.cpp  taskdelegate.h  taskmodel.cpp  taskmodel.h  taskpage.cpp  taskpage.h
src/util/: loger.cpp  loger.h  qvarianthelper.h  url.cpp  url.h
